force-app/main/default/objects/Quality_Control__c/fields/Case_SFDC__c.field-meta.xml
<CustomField>
    <fullName>Case_SFDC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case SFDC</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Quality Control</relationshipLabel>
    <relationshipName>Quality_Control</relationshipName>
    <type>Lookup</type>
</CustomField>