force-app/main/default/objects/Quality_Control__c/fields/Comment_Agent__c.field-meta.xml
<CustomField>
    <fullName>Comment_Agent__c</fullName>
    <label>Comment Agent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>