force-app/main/default/objects/Quality_Control__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quality Control</relationshipLabel>
    <relationshipName>Quality_Control</relationshipName>
    <type>Lookup</type>
</CustomField>