force-app/main/default/objects/Quality_Control__c/fields/Contact_Other__c.field-meta.xml
<CustomField>
    <fullName>Contact_Other__c</fullName>
    <label>Contact Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>