force-app/main/default/objects/Quality_Control__c/fields/Count_KeyCheck__c.field-meta.xml
<CustomField>
    <fullName>Count_KeyCheck__c</fullName>
    <formula>IF(!ISBLANK(X1_Key_Check__c), 1, 0) +
IF(!ISBLANK(X2_Key_Check__c), 1, 0) +
IF(!ISBLANK(X3_Key_Check__c), 1, 0) +
IF(!ISBLANK(X4_Key_Check__c), 1, 0) +
IF(!ISBLANK(X5_Key_Check__c), 1, 0) +
IF(!ISBLANK(X6_Key_Check__c), 1, 0) +
IF(!ISBLANK(X7_Key_Check__c), 1, 0) +
IF(!ISBLANK(X8_Key_Check__c), 1, 0) +
IF(!ISBLANK(X9_Key_Check__c), 1, 0) +
IF(!ISBLANK(X10_Key_Check__c), 1, 0) +
IF(!ISBLANK(X11_Key_Check__c), 1, 0) +
IF(!ISBLANK(X12_Key_Check__c), 1, 0) +
IF(!ISBLANK(X13_Key_Check__c), 1, 0) +
IF(!ISBLANK(X14_Key_Check__c), 1, 0) +
IF(!ISBLANK(X15_Key_Check__c), 1, 0) +
IF(!ISBLANK(X16_Key_Check__c), 1, 0) +
IF(!ISBLANK(X17_Key_Check__c), 1, 0) +
IF(!ISBLANK(X18_Key_Check__c), 1, 0) +
IF(!ISBLANK(X19_Key_Check__c), 1, 0) +
IF(!ISBLANK(X20_Key_Check__c), 1, 0) +
IF(!ISBLANK(X21_Key_Check__c), 1, 0) +
IF(!ISBLANK(X22_Key_Check__c), 1, 0) +
IF(!ISBLANK(X23_Key_Check__c), 1, 0) +
IF(!ISBLANK(X24_Key_Check__c), 1, 0) +
IF(!ISBLANK(X25_Key_Check__c), 1, 0) +
IF(!ISBLANK(X26_Key_Check__c), 1, 0) +
IF(!ISBLANK(X27_Key_Check__c), 1, 0) +
IF(!ISBLANK(X28_Key_Check__c), 1, 0) +
IF(!ISBLANK(X29_Key_Check__c), 1, 0) +
IF(!ISBLANK(X30_Key_Check__c), 1, 0) +
IF(!ISBLANK(X31_Key_Check__c), 1, 0) +
IF(!ISBLANK(X32_Key_Check__c), 1, 0) +
IF(!ISBLANK(X33_Key_Check__c), 1, 0) +
IF(!ISBLANK(X34_Key_Check__c), 1, 0) +
IF(!ISBLANK(X35_Key_Check__c), 1, 0) +
IF(!ISBLANK(X36_Key_Check__c), 1, 0) +
IF(!ISBLANK(X37_Key_Check__c), 1, 0) +
IF(!ISBLANK(X38_Key_Check__c), 1, 0) +
IF(!ISBLANK(X39_Key_Check__c), 1, 0) +
IF(!ISBLANK(X40_Key_Check__c), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count KeyCheck</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>