force-app/main/default/objects/Quality_Control__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <defaultValue>CASE($User.Entity__c, 
&apos;AFI&apos;, &apos;AFI&apos;, 
&apos;ALI&apos;, &apos;ALI&apos;, 
&apos;MAGI&apos;, &apos;MAGI&apos;, 
&apos;AMFS&apos;, &apos;AMFS&apos;, 
&apos;AGI&apos;, &apos;AGI&apos;, 
&apos;&apos;)</defaultValue>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MAGI</fullName>
            </value>
            <value>
                <fullName>AMFS</fullName>
            </value>
            <value>
                <fullName>AFI</fullName>
            </value>
            <value>
                <fullName>ALI</fullName>
            </value>
            <value>
                <fullName>AGI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>