force-app/main/default/objects/Quality_Control__c/fields/Evaluator__c.field-meta.xml
<CustomField>
    <fullName>Evaluator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quality_Control1</relationshipName>
    <type>Lookup</type>
</CustomField>