force-app/main/default/objects/Quality_Control__c/fields/Final_Score__c.field-meta.xml
<CustomField>
    <fullName>Final_Score__c</fullName>
    <formula>Group_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>