force-app/main/default/objects/Quality_Control__c/fields/Group_1_End__c.field-meta.xml
<CustomField>
    <fullName>Group_1_End__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Group 1 End</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>