force-app/main/default/objects/Quality_Control__c/fields/Group_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_2_Name__c</fullName>
    <label>Group 2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>