force-app/main/default/objects/Quality_Control__c/fields/Group_3_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_3_Name__c</fullName>
    <label>Group 3 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>