force-app/main/default/objects/Quality_Control__c/fields/Group_3_Point__c.field-meta.xml
<CustomField>
    <fullName>Group_3_Point__c</fullName>
    <label>Group 3 Point</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>