force-app/main/default/objects/Quality_Control__c/fields/Group_Total__c.field-meta.xml
<CustomField>
    <fullName>Group_Total__c</fullName>
    <formula>Group_1_Point__c + 
 Group_2_Point__c + 
 Group_3_Point__c + 
 Group_4_Point__c + 
 Group_5_Point__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>