force-app/main/default/objects/Quality_Control__c/fields/Hold_Time__c.field-meta.xml
<CustomField>
    <fullName>Hold_Time__c</fullName>
    <label>Hold Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>