force-app/main/default/objects/Quality_Control__c/fields/No_Polis__c.field-meta.xml
<CustomField>
    <fullName>No_Polis__c</fullName>
    <label>No Polis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>