force-app/main/default/objects/Quality_Control__c/fields/Pass_Group_1__c.field-meta.xml
<CustomField>
    <fullName>Pass_Group_1__c</fullName>
    <label>Pass Group 1</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>