force-app/main/default/objects/Quality_Control__c/fields/Perform__c.field-meta.xml
<CustomField>
    <fullName>Perform__c</fullName>
    <formula>IF ( Group_Total__c &gt;=  NULLVALUE(Rating_A_Score__c,0) ,  Rating_A_Name__c ,
IF ( Group_Total__c &gt;= NULLVALUE(Rating_B_Score__c,0), Rating_B_Name__c ,
IF ( Group_Total__c &gt;= NULLVALUE(Rating_C_Score__c,0), Rating_C_Name__c ,
IF ( Group_Total__c &gt;= NULLVALUE(Rating_D_Score__c,0), Rating_D_Name__c ,
IF ( Group_Total__c &gt;= NULLVALUE(Rating_E_Score__c,0), Rating_E_Name__c ,
&quot;Not Available&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perform</label>
    <type>Text</type>
</CustomField>