force-app/main/default/objects/Quality_Control__c/fields/Rating_B_Score__c.field-meta.xml
<CustomField>
    <fullName>Rating_B_Score__c</fullName>
    <label>Rating B Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>