force-app/main/default/objects/Quality_Control__c/fields/Rating_D_Name__c.field-meta.xml
<CustomField>
    <fullName>Rating_D_Name__c</fullName>
    <label>Rating D Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>