force-app/main/default/objects/Quality_Control__c/fields/Rating_E_Score__c.field-meta.xml
<CustomField>
    <fullName>Rating_E_Score__c</fullName>
    <label>Rating E Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>