force-app/main/default/objects/Quality_Control__c/fields/SC_No__c.field-meta.xml
<CustomField>
    <fullName>SC_No__c</fullName>
    <displayFormat>{0}</displayFormat>
    <label>SC No</label>
    <type>AutoNumber</type>
</CustomField>