force-app/main/default/objects/Quality_Control__c/fields/Sub_Team__c.field-meta.xml
<CustomField>
    <fullName>Sub_Team__c</fullName>
    <label>Sub Team</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Team__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Inbound Individu</fullName>
            </value>
            <value>
                <fullName>Inbound DPLK</fullName>
            </value>
            <value>
                <fullName>Inbound Corporate Solutions</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Walk-in Regular</fullName>
            </value>
            <value>
                <fullName>Walk-In Preffered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>