force-app/main/default/objects/Quality_Control__c/fields/Talk_Time__c.field-meta.xml
<CustomField>
    <fullName>Talk_Time__c</fullName>
    <label>Talk Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>