force-app/main/default/objects/Quality_Control__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Email &amp; Live Chat</fullName>
            </value>
            <value>
                <fullName>Walk IN</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Live Chat</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Welcome Call</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>Outbound TM</fullName>
            </value>
            <value>
                <fullName>Inbound TM</fullName>
            </value>
            <value>
                <fullName>Email TM</fullName>
            </value>
            <value>
                <fullName>Social Media</fullName>
            </value>
            <value>
                <fullName>Live Chat TM &amp; Agency</fullName>
            </value>
            <value>
                <fullName>Email &amp; Contact Us</fullName>
            </value>
            <value>
                <fullName>Duty Call</fullName>
            </value>
            <value>
                <fullName>Outbound WCT</fullName>
            </value>
            <value>
                <fullName>Outbound CR</fullName>
            </value>
            <value>
                <fullName>CMU</fullName>
            </value>
            <value>
                <fullName>AFI HNW</fullName>
            </value>
            <value>
                <fullName>Virtual Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>