force-app/main/default/objects/Quality_Control__c/fields/Tgl_Call_Mon__c.field-meta.xml
<CustomField>
    <fullName>Tgl_Call_Mon__c</fullName>
    <label>Tgl. Call Mon</label>
    <type>Date</type>
</CustomField>