force-app/main/default/objects/Quality_Control__c/fields/Tgl_Recording__c.field-meta.xml
<CustomField>
    <fullName>Tgl_Recording__c</fullName>
    <label>Tgl Recording</label>
    <type>DateTime</type>
</CustomField>