force-app/main/default/objects/Quality_Control__c/fields/URL_Recording__c.field-meta.xml
<CustomField>
    <fullName>URL_Recording__c</fullName>
    <label>URL Recording</label>
    <type>Url</type>
</CustomField>