force-app/main/default/objects/Quality_Control__c/fields/X10_Description__c.field-meta.xml
<CustomField>
    <fullName>X10_Description__c</fullName>
    <label>10 Description</label>
    <type>TextArea</type>
</CustomField>