force-app/main/default/objects/Quality_Control__c/fields/X10_Key_Check__c.field-meta.xml
<CustomField>
    <fullName>X10_Key_Check__c</fullName>
    <label>10 Key Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>