force-app/main/default/objects/Quality_Control__c/fields/X10_Point2__c.field-meta.xml
<CustomField>
    <fullName>X10_Point2__c</fullName>
    <formula>IF(X10_Master_Point__c == 0, 0, X10_Point__c / X10_Master_Point__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>10 Point %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>