force-app/main/default/objects/Quality_Control__c/fields/X10_Point__c.field-meta.xml
<CustomField>
    <fullName>X10_Point__c</fullName>
    <formula>IF ( TEXT(X10_Score__c) == &apos;YES&apos;, X10_Master_Point__c, 
IF ( TEXT(X10_Score__c) == &apos;3&apos;, X10_Master_Point__c, 
IF ( TEXT(X10_Score__c) == &apos;2&apos;, X10_Master_Point__c / 3 * 2, 
IF ( TEXT(X10_Score__c) == &apos;1&apos;, X10_Master_Point__c / 3, 
0))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>10 Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>