force-app/main/default/objects/Quality_Control__c/fields/X10_Remark__c.field-meta.xml
<CustomField>
    <fullName>X10_Remark__c</fullName>
    <label>10 Remark</label>
    <length>22768</length>
    <type>LongTextArea</type>
</CustomField>