force-app/main/default/objects/Quality_Control__c/fields/X10_Score__c.field-meta.xml
<CustomField>
    <fullName>X10_Score__c</fullName>
    <label>10 Score</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>X10_Scoring_Schemes__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>