force-app/main/default/objects/Quality_Control__c/fields/X11_Description__c.field-meta.xml
<CustomField>
    <fullName>X11_Description__c</fullName>
    <label>11 Description</label>
    <type>TextArea</type>
</CustomField>