force-app/main/default/objects/Quality_Control__c/fields/X11_Key_Check__c.field-meta.xml
<CustomField>
    <fullName>X11_Key_Check__c</fullName>
    <label>11 Key Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>