force-app/main/default/objects/Quality_Control__c/fields/X11_Master_Point__c.field-meta.xml
<CustomField>
    <fullName>X11_Master_Point__c</fullName>
    <defaultValue>0</defaultValue>
    <label>11 Master Point</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>