force-app/main/default/objects/Quality_Control__c/fields/X11_Point2__c.field-meta.xml
<CustomField>
    <fullName>X11_Point2__c</fullName>
    <formula>IF(X11_Master_Point__c == 0, 0, X11_Point__c / X11_Master_Point__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>11 Point %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>