force-app/main/default/objects/Quality_Control__c/fields/X11_Remark__c.field-meta.xml
<CustomField>
    <fullName>X11_Remark__c</fullName>
    <label>11 Remark</label>
    <length>22768</length>
    <type>LongTextArea</type>
</CustomField>