force-app/main/default/objects/Quality_Control__c/fields/X12_Description__c.field-meta.xml
<CustomField>
    <fullName>X12_Description__c</fullName>
    <label>12 Description</label>
    <type>TextArea</type>
</CustomField>