force-app/main/default/objects/Quality_Control__c/fields/X12_Key_Check__c.field-meta.xml
<CustomField>
    <fullName>X12_Key_Check__c</fullName>
    <label>12 Key Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>