force-app/main/default/objects/Quality_Control__c/fields/X12_Remark__c.field-meta.xml
<CustomField>
    <fullName>X12_Remark__c</fullName>
    <label>12 Remark</label>
    <length>22768</length>
    <type>LongTextArea</type>
</CustomField>