force-app/main/default/objects/Quality_Control__c/fields/X12_Scoring_Schemes__c.field-meta.xml
<CustomField>
    <fullName>X12_Scoring_Schemes__c</fullName>
    <label>12 Scoring Schemes</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes/No Scheme</fullName>
                <default>true</default>
                <label>Yes/No Scheme</label>
            </value>
            <value>
                <fullName>Likert Scale Scheme (1-3)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>