force-app/main/default/objects/Quality_Control__c/fields/X1_Score_Name__c.field-meta.xml
<CustomField>
    <fullName>X1_Score_Name__c</fullName>
    <formula>TEXT(X1_Score__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1 GREETING CALLS</label>
    <type>Text</type>
</CustomField>