force-app/main/default/objects/Quality_Control__c/fields/X3_Score_Name__c.field-meta.xml
<CustomField>
    <fullName>X3_Score_Name__c</fullName>
    <formula>TEXT(X3_Score__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3 INTONATION</label>
    <type>Text</type>
</CustomField>