force-app/main/default/objects/Quality_Control__c/fields/X6_Score_Name__c.field-meta.xml
<CustomField>
    <fullName>X6_Score_Name__c</fullName>
    <formula>TEXT(X6_Score__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>6 END CALLS</label>
    <type>Text</type>
</CustomField>