force-app/main/default/objects/Quality_Control__c/validationRules/Master_must_checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Master_must_checked</fullName>
    <active>true</active>
    <errorConditionFormula>RecordType.Name == &apos;Master&apos; &amp;&amp; !Master__c</errorConditionFormula>
    <errorDisplayField>Master__c</errorDisplayField>
    <errorMessage>Master Must Checked</errorMessage>
</ValidationRule>